--- a/WpfApp24/OrmWindow.xaml
+++ b/WpfApp24/OrmWindow.xaml
@@ -64,6 +64,8 @@
                                         DisplayMemberBinding="{Binding Path=Name}"></GridViewColumn>
                         <GridViewColumn Header="Price"
                                         DisplayMemberBinding="{Binding Path=Price}"></GridViewColumn>
+                        <GridViewColumn Header="Del"
+                                        DisplayMemberBinding="{Binding Path=DeleteDt}"></GridViewColumn>
 
                     </GridView>
                 </ListView.View>
