--- a/WpfApp24/OrmWindow.xaml
+++ b/WpfApp24/OrmWindow.xaml
@@ -113,5 +113,40 @@
                 </ListView.Resources>
             </ListView>
         </StackPanel>
+
+        <StackPanel Orientation="Vertical"
+                    Grid.Row="1" Grid.Column="1">
+            <StackPanel Orientation="Horizontal" 
+                        HorizontalAlignment="Center">
+                <Label Content="Продажи"
+                       FontSize="22" FontWeight="DemiBold"/>
+                <Button Content="CreateSale" x:Name="AddSaleButton"
+                        Padding="5 1" Margin="15 0 0 0"
+                        FontSize="22" FontWeight="DemiBold"
+                        Click="AddSaleButton_Click"/>
+            </StackPanel>
+            <ListView ItemsSource="{Binding Sales}"
+                      ScrollViewer.VerticalScrollBarVisibility="Visible"
+                      ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                      MaxHeight="175">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn
+                            Header="Дата"
+                            DisplayMemberBinding="{Binding Path=SaleDt}"/>
+                        <GridViewColumn
+                            Header="Количество"
+                            DisplayMemberBinding="{Binding Path=Quantity}"/>
+                    </GridView>
+                </ListView.View>
+                <ListView.Resources>
+                    <Style TargetType="{x:Type ListViewItem}">
+                        <EventSetter
+                            Event="MouseDoubleClick"
+                            Handler="SalesItem_MouseDoubleClick"/>
+                    </Style>
+                </ListView.Resources>
+            </ListView>
+        </StackPanel>
     </Grid>
 </Window>
